2.8.0 (08.06.2020):

* Interpolate colours according to OCR confidence in HSV space.
* Limit zoom to 100 to avoid errors like:
  "drawing failure for widget 'GtkBox': error occurred in libfreetype"
* Also update text position and rectangle when updating bounding box.
* + button to add to text layer
* Update to Hungarian translation (thanks to csola)


2.7.0 (08.05.2020):

* Cache device list to speed up first display of scan dialog.
* Fix bug updating switch widgets in scan options.
* Fixed bug importing file with non-ASCII characters in filename from file
  browser.
* Use daylight savings time from document date when setting timezone.
* Use UTF8 in logs, fixing "wide character in print" warnings.
* Fix UTF8 encoding when importing metadata from PDF or DjVu.
* When editing OCR text, display bounding box on image and allow it to be
  adjusted.
* + buttons to navigate between OCR text boxes, sorted by confidence level.
* Zoom to text when editing OCR
* Fix error running File/Compress temporary files.
* Use only xdg-email for creating email. Closes feature request #112
  (Use gsettings and xdg-email instead of gconftool for sending e-mails)
* Use GTK functionality instead of xdg-open for launching file viewer.
* Update to French translation (thanks to Jean-Marc)


2.6.7 (08.04.2020):

* Fix bug causing stretched images after cropping.
* Don't allow errors without page numbers to hang GUI.
* Fixed bug importing multipage DjVu.
* Fixed bug reloading options after setting manual paper size.


2.6.6 (06.04.2020):

* Support importing PDF with different resolutions in x and y directions.
* Fix bug applying paper after option set SANE_INFO_INEXACT
  Closes bugs #346 (gscan2pdf paper size selection inoperative) and
  #348 (paper size selection has no effect for US Letter / US Legal)
* Update to Bulgarian translation (thanks to Berov)
* Update to Turkish translation (thanks to Utku BERBEROĞLU)


2.6.5 (06.03.2020):
